--- a/task 6/src/main/resources/db.properties
+++ b/task 6/src/main/resources/db.properties
@@ -1,9 +1,9 @@
-Postgres properties
+# PostgreSQL properties
 db.driver=org.postgresql.Driver
 db.url=jdbc:postgresql://localhost:5432/postgres
 db.username=postgres
 db.password=250484
-
-Hibernate properties
+# Hibernate properties
 hibernate.show_sql=true
-hibernate.hbm2ddl.auto=create
+hibernate.hbm2ddl.auto=update
+
